# TinyTransfer

./: .gitignore  CLAUDE.md  CODEBUDDY.md  LICENSE  README.md  RELEASE_TODO.md  SlimTransfer代码审查报告.md  SlimTransfer内容变现商业化方案.md  TinyTransfer_UI_Component_Spec.md  TinyTransfer_UX_Evaluation.md  TinyTransfer_缺口调研报告.md  branding-personality-injection-report.md  build-tauri.bat  overview.md  package-lock.json  package.json  performance-analysis-report.md  performance-optimization-guide.md  专业审查报告.md  架构优化方案.md
.claude/: settings.local.json
.design_library/Apple/: css.json  metadata.json
.trae/documents/: interaction_optimization_plan.md
.trae/rules/: project_rules.md
.trae/specs/arch-optimize-plan-c/: checklist.md  spec.md  tasks.md
.trae/specs/rust-rewrite/: checklist.md  spec.md  tasks.md
doc/: directory-structure.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: auth.ts  client.ts  devices.ts  files.ts  system.ts
frontend/src/composables/: useBatchMode.ts  useContextMenu.ts  useDownload.ts  useDragDrop.ts  useFilePreview.ts  useGuidedTour.ts  useKonami.ts  usePullRefresh.ts  useSSE.ts  useSpeedTest.ts  useTauri.ts  useUpload.ts
frontend/src/stores/: auth.ts  devices.ts  files.ts  theme.ts  ui.ts  upload.ts
frontend/src/styles/: base.css  components.css  files.css  layout.css  (+3 more)
rust/: Cargo.toml
rust/src-tauri/: Cargo.toml  package.json  tauri.conf.json
rust/src-tauri/capabilities/: main.json
rust/src-tauri/icons/: icon.icns
rust/src-tauri/icons/macos/: icon.icns
rust/src-tauri/permissions/: app-commands.toml
rust/src-tauri/src/: broker.rs  commands.rs  device_tracker.rs  file_manager.rs  lib.rs  main.rs  routes.rs  security.rs  server.rs  state.rs  utils.rs
rust/src-tauri/src/platform/: config.rs  macos.rs  mod.rs  unix.rs  windows.rs
rust/src-tauri/tests/: TEST_REPORT.md  mobile_upload_test.js  permissions_test.rs  test_mobile_upload.html
scripts/: build-icons.py  generate-icons.bat  generate-lightning-icon.py  generate-lightning-svg.py  move-icons.py  render-svg.js  svg-to-png.py  test-api.ps1  test-sse.ps1
tests/: run-tests.ps1
tiny-transfer-competitive-analysis/: tiny-transfer-competitive-analysis.html
tiny-transfer-mobile/: orchestration-summary.json  tiny-transfer-mobile.design
tiny-transfer-mobile/pages/: file-preview.html  file-transfer.html  qr-connect.html  upload-sheet.html
(+27 files in other folders)
