[package]
name = "slim-transfer"
version = "0.1.0"
description = "SlimTransfer - Fast LAN file sharing"
authors = ["SlimTransfer Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
dashmap = "6"
tokio-stream = "0.1"
futures = "0.3"
include_dir = "0.7"
fs2 = "0.4"
mime_guess = "2"
subtle = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"

[lib]
name = "slim_transfer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "slim-transfer"
path = "src/main.rs"
