[package]
name = "tiny-transfer"
version = "0.1.0"
description = "TinyTransfer - Fast LAN file sharing"
authors = ["Lo-Heng"]
license = "PolyForm-Noncommercial-1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
raw-window-handle = "0.6"
open = "5"
image = "0.25"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
dashmap = "6"
tokio-stream = "0.1"
futures = "0.3"
include_dir = "0.7"
fs2 = "0.4"
mime_guess = "2"
subtle = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_System_Threading"] }

[lib]
name = "tiny_transfer_lib"
crate-type = ["lib"]

[[bin]]
name = "TinyTransfer"
path = "src/main.rs"
